[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldencheetah-mcp"
version = "0.1.0"
description = "Local MCP bridge for GoldenCheetah AI workout endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1,<2",
]

[project.scripts]
goldencheetah-mcp = "goldencheetah_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["goldencheetah_mcp*"]
